# MAGI-01

./: .gitignore  README.md  config.py  example.py  ingest_documents.py  launch_webui.py  main.py  pyproject.toml  streamlit_app.py  test.py
agents/: magi_agent.py  magi_deliberator.py  magi_system.py  personalities.py
documentation/: ARCHITECTURE.md  RAG_SETUP.md
tests/: test_embeddings.py  test_magi_system.py
tools/: rag_tool.py
