[project]
name = "magisystem"
version = "0.1.0"
description = "Multi-agent LLM system with voting council using LM Studio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.9",
    "langchain-google-genai>=2.0.0",
    "duckduckgo-search>=6.3.5",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.28.0",
    "ddgs>=9.9.1",
]
